[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hackernewscli_term"
version = "0.0.4"
authors = [
  { name="rodfer0x80", email="rodfer0x80@proton.me" },
]
description = "hackernews in the cli"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
requires = ["requests", "pyfiglet"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
]

[project.urls]
"Homepage" = "https://github.com/rodfer0x80/hackernewscli"
"Bug Tracker" = "https://github.com/rodfer0x80/hackernewscli/issues"
